feat: adds annotations to jupyter

--- a/long_simulation.ipynb
+++ b/long_simulation.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulación larga"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importamos los módulos necesarios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos las constantes necesarias para el uso de la simulación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -20,6 +41,13 @@
    "source": [
     "TRUCKS_PATH = 'trucks.csv'\n",
     "ITERATIONS = 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos las funciones para el procesamiento"
    ]
   },
   {
@@ -37,6 +65,8 @@
     "        4: 'Viernes'\n",
     "    }[day_idx]\n",
     "\n",
+    "\n",
+    "\"\"\" Simula un día particular y retorna un dataframe con las estadísticas \"\"\"\n",
     "def simulate_day(routes_path, day):\n",
     "    simulator = LongSimulator(str(day), routes_path, TRUCKS_PATH, iterations=ITERATIONS)\n",
     "    df = pd.DataFrame(simulator.run()).drop('simulation_id', axis=1)\n",
@@ -47,6 +77,7 @@
     "\n",
     "grouped = ['day_id', 'day', 'truck']\n",
     "\n",
+    "\"\"\" Simula todos los días y retorna un gran dataframe con todos los datos \"\"\"\n",
     "def simulate_days(routes_path):\n",
     "    df = pd.DataFrame()\n",
     "    \n",
@@ -55,6 +86,7 @@
     "\n",
     "    return df\n",
     "    \n",
+    "\"\"\" Obtiene los resúmenes de los indicadores propuestos según un dataframe de simulación \"\"\"\n",
     "def get_summaries(df):\n",
     "    final_df = pd.DataFrame()\n",
     "    groupby = df.groupby(grouped)\n",
@@ -72,6 +104,7 @@
     "    final_df = final_df.set_index(['kpi', *grouped]).sort_index()\n",
     "    return final_df.reset_index(level=1, drop=True)\n",
     "\n",
+    "\"\"\" Obtiene los datos de los viajes según un dataframe de simulación \"\"\"\n",
     "def get_trips(df):\n",
     "    groupby = df.groupby(grouped)\n",
     "\n",
@@ -85,16 +118,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificamos que existan las carpetas necesarias para guardar los resultados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdirs = ['./results/original', './results/optimal']\n",
+    "outdirs = ['./results', './results/original', './results/optimal']\n",
     "\n",
     "for outdir in outdirs:\n",
     "    if not os.path.exists(outdir):\n",
     "        os.mkdir(outdir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejecutamos la simulación en el caso original y guardamos en `csv`"
    ]
   },
   {
@@ -107,6 +154,13 @@
     "\n",
     "get_summaries(original).to_csv('./results/original/simulation_summary.csv')\n",
     "get_trips(original).to_csv('./results/original/trip_summary.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejecutamos la simulación en el caso óptimo y guardamos en `csv`"
    ]
   },
   {
